--- a/notes.tex
+++ b/notes.tex
@@ -702,8 +702,16 @@ Parameterization 7: $We > W0 > W1$, $42.33 > 4.96 > 2.83$. Mediator optimally ch
 
 
 
+\section{Would negotiating parties choose intermediate e in CSD?}
 
+High type's IC with potentially interior $e$
+$$pT(1+eg) + (1-p)(W-D(1+eg)) - (1-\de_h)g \geq p(W+Weg-D) + (1-p)(W-D)$$
+$$pT(1+eg) - (1-p)Deg - (1-\de_h)g \geq p(W+Weg-D)$$
+$$\de_h g \geq p(W+Weg-D) - pT(1+eg) + (1-p)Deg + g$$
+$$\de_h \geq \frac{p(W-D-T) + peg (W-T) + (1-p)Deg + g }{g}$$
+$$\de_h \geq \frac{p(W-D-T)}{g} + p e(W-T) + (1-p)eD + 1$$
 
+I need to add calculations for $g$ from my written notes
 
 \vskip.5in
 \section{Develop result: mediator increases potential for peace}
